--- a/AdBlock/Amap.conf
+++ b/AdBlock/Amap.conf
@@ -8,6 +8,7 @@
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @UpdateTime        2023-01-09
 // @Suitable          自行观看“# > ”注释内容
+// @Attention         使用前请卸载高德地图，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Version           V1.0.14
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
