--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -9,8 +9,8 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-09
-// @ConfigVersion     V0.0.94
+// @UpdateTime        2023-01-10
+// @ConfigVersion     V0.0.95
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
@@ -64,6 +64,9 @@
 //2023-01-06 41、压缩并优化B站脚本内容，大小由24kb->5kb
 //2023-01-07 42、删除脚本中未匹配的$request.url的Part内容
 //2023-01-09 43、屏蔽B站漫画底部中间的手机图片活动
+//2023-01-10 44、调整粉色B站与白色B站在直连或代理四种情况下顶部tab，删除白B番剧和影视顶部重复tab，如果你在使用白B，请在规则后加上#out=proto
+
+
 
 hostname = app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, *.bilibili.com, *.bilibili.*, grpc.biliapi.net,api.biliapi.net, -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net
 
