--- a/AdBlock/AppletAds.conf
+++ b/AdBlock/AppletAds.conf
@@ -7,7 +7,7 @@
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @UpdateTime        2023-01-13
-// @Attention         本重写目前处于测试版，请谨慎使用
+// @Attention         本重写目前处于测试阶段，请谨慎使用
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Version           V1.0.0
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/AppletAds.conf
