--- a/AdBlock/AppletAds.conf
+++ b/AdBlock/AppletAds.conf
@@ -6,19 +6,19 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-13
+// @UpdateTime        2023-01-14
 // @Attention         本重写目前处于测试阶段，请谨慎使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.0
+// @Version           V1.0.1
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/AppletAds.conf
 // ==/UserScript==
 
 
+//有bug，暂时注释
 
 
+//hostname=*tshort.weixin.qq.com
 
-hostname=*tshort.weixin.qq.com
-
-^http?:\/\/.*tshort\.weixin\.qq\.com\/mmtls\/\w+ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/applet.js
+//^http?:\/\/.*tshort\.weixin\.qq\.com\/mmtls\/\w+ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/applet.js
 
 
