--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-08
+// @UpdateTime        2023-01-16
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.49
+// @Version           V2.0.50
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -61,7 +61,7 @@
 # [+]2023-01-05  43、添加屏蔽sdkconfig请求及应用内弹窗广告请求
 # [+]2023-01-06  44、去除微博我的页面中Myname后面的续费VIP_Icon内容
 # [+]2023-01-08  45、屏蔽发现页面顶部搜索框热词，将热词恢复为‘搜索’
-
+# [+]2023-01-16  46、去除微博短视频中的右下角的红包`转发有礼`与左下角商品推广`进店逛逛`等推广标志
 
 
 
