--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -11,7 +11,7 @@
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.50
+// @Version           V2.0.51
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -35,7 +35,8 @@
 # [+]2022-09-02  17、删除初次打开搜索页的轮播图
 # [+]2022-09-12  18、修复超话无法签到bug
 # [+]2022-10-11  19、移除首页新版广告
-# [+]2022-10-24  20、移除用户页新版广告🍁以上1-20条为@zmqcherish所写,下面21条开始为@墨鱼所写🍁
+# [+]2022-10-24  20、移除用户页新版广告
+# [+]2022-10-24  XX、🍁以上1-20条为@zmqcherish所写，下面21条开始为@墨鱼所写🍁
 # [+]2022-12-14  21、将微博国际版去广告与微博去广告二合一，删除微博发现页的轮播图，add key removeSearchWindow for true
 # [+]2022-12-15  22、更换微博国际版去广告的search_topic
 # [+]2022-12-15  23、微博国际版去广告不再采用单一reject方式，利用脚本去广告
