--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -64,7 +64,7 @@
 //2023-01-06 41、压缩并优化B站脚本内容，大小由24kb->5kb
 //2023-01-07 42、删除脚本中未匹配的$request.url的Part内容
 //2023-01-09 43、屏蔽B站漫画底部中间的手机图片活动
-//2023-01-10 44、调整粉色B站与白色B站在直连或代理四种情况下顶部tab，删除白B番剧和影视顶部重复tab，如果你在使用白B，请在规则后加上#out=proto
+//2023-01-10 44、调整粉色B站与白色B站在直连或代理四种情况下顶部tab，删除白B番剧和影视顶部重复tab
 //2023-01-16 45、去除白B动态中“可能感兴趣的up主”card
 //2023-01-16 46、更新proto脚本，去除ipad端视频播放页面右上角的推荐广告
 
