--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -67,7 +67,7 @@
 //2023-01-10 44、调整粉色B站与白色B站在直连或代理四种情况下顶部tab，删除白B番剧和影视顶部重复tab
 //2023-01-16 45、去除白B动态中“可能感兴趣的up主”card
 //2023-01-16 46、更新proto脚本，去除ipad端视频播放页面右上角的推荐广告
-//2023-01-17 47、proto动态去广告正则匹配添加grpc.biliapi.net，兴许后面QX会支持MITM h2
+//2023-01-17 47、proto动态去广告正则匹配添加grpc.biliapi.net(方便surge用户)，兴许后面QX也会跟进MITM h2
 
 
 
