--- a/AdBlock/AppletAds.conf
+++ b/AdBlock/AppletAds.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        通用微信小程序去开屏广告&朋友圈广告
+// @ScriptName        通用微信小程序去开屏广告
 // @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
@@ -14,7 +14,7 @@
 // ==/UserScript==
 
 
-
+//自用不公开
 
 
 //hostname=*tshort.weixin.qq.com
