--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -11,7 +11,7 @@
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.52
+// @Version           V2.0.53
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -69,7 +69,7 @@
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 
 # > 微博_请手动添加以下分流至本地
-#host, sdkapp.uve.weibo.com, direct
+; host, sdkapp.uve.weibo.com, direct
 
 # > 微博_屏蔽首页左上角每日的弹窗tips@ddgksf2013
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d/push/daily url reject-dict
