--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -34,6 +34,8 @@
 
 # ======= 0~9 ======= #
 
+# > version
+^https?:\/\/2023\.01\.20/v2\.0\/246 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
