--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-18
+// @UpdateTime        2023-01-24
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.54
+// @Version           V2.0.55
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -64,6 +64,7 @@
 # [+]2023-01-08  45、屏蔽发现页面顶部搜索框热词，将热词恢复为‘搜索’
 # [+]2023-01-16  46、去除微博短视频中的右下角的红包`转发有礼`与左下角商品推广`进店逛逛`等推广标志
 # [+]2023-01-18  47、屏蔽微博客户端首页左上角每日的弹窗tips
+# [+]2023-01-24  48、去除微博底部超话栏表层浮icon及tips
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
@@ -71,6 +72,8 @@ hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 # > 微博_请手动添加以下分流至本地@ddgksf2013
 ; host, sdkapp.uve.weibo.com, direct
 
+# > 微博_去除底部超话栏表层浮icon及tips@ddgksf2013
+^https?:\/\/api\.weibo\.cn\/\d\/!\/huati\/discovery_home_bottom_getdotinfo url reject-dict
 # > 微博_屏蔽首页左上角每日的弹窗tips@ddgksf2013
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d/push/daily url reject-dict
 # > 微博_屏蔽发现页面搜索框热词@ddgksf2013
