--- a/AdBlock/Amap.conf
+++ b/AdBlock/Amap.conf
@@ -21,8 +21,9 @@ hostname=*.amap.com
 # > 高德地图_请自行添加本地分流@ddgksf2013
 ;host, amdc.m.taobao.com, reject
 
+
 # > 高德地图_首页右中广告@ddgksf2013
-https://m5.amap.com/ws/shield/frogserver/aocs/updatable url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amap.js
+^https?:\/\/.*\.amap\.com\/ws\/shield\/frogserver\/aocs\/updatable url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amap.js
 # > 高德地图_附近页面@ddgksf2013
 ^https?:\/\/.*\.amap\.com\/ws\/shield\/search\/nearbyrec_smart url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amap.js
 # > 高德地图_打车页面@ddgksf2013
