--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -11,7 +11,7 @@
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.55
+// @Version           V2.0.56
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -64,7 +64,8 @@
 # [+]2023-01-08  45、屏蔽发现页面顶部搜索框热词，将热词恢复为‘搜索’
 # [+]2023-01-16  46、去除微博短视频中的右下角的红包`转发有礼`与左下角商品推广`进店逛逛`等推广标志
 # [+]2023-01-18  47、屏蔽微博客户端首页左上角每日的弹窗tips
-# [+]2023-01-24  48、去除微博底部超话栏表层浮icon及tips
+# [+]2023-01-22  48、去除微博热搜对应某关键词下信息流中的遗留广告
+# [+]2023-01-24  49、去除微博底部超话栏表层浮icon及tips
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
