--- a/AdBlock/YoutubeAds.conf
+++ b/AdBlock/YoutubeAds.conf
@@ -1,7 +1,7 @@
 ########################################
 #应用名称：  Youtube Block AD
 #脚本作者：  @DivineEngine, @app2smile, @Maasea
-#更新时间：  2023-01-02
+#更新时间：  2023-01-26
 #使用说明：  用于视频、瀑布流、搜索、播放页、短视频及贴片广告，不适用允许 UDP 转发的节点及 Premium
 #使用说明：  如果视频广告仍然存在，请在QuantumultX配置文件的[general]下添加 udp_drop_list=443
 #通知频道：  https://t.me/ddgksf2021
@@ -19,7 +19,7 @@ hostname = -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.yout
 
 
 # ======= 瀑布流|搜索|播放页|短视频|贴片 广告 ======= #
-^https:\/\/youtubei\.googleapis\.com\/youtubei\/v\d\/(browse|search|next|player|reel\/reel_watch_sequence|guide) url script-response-body https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube.js
+^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next|player|search|reel\/reel_watch_sequence|guide|log_event) url script-response-body https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube.js
 
 
 # ======= 通用广告请求 ======= #
