--- a/AdBlock/YoutubeAds.conf
+++ b/AdBlock/YoutubeAds.conf
@@ -18,7 +18,7 @@ hostname = -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.yout
 ^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject-200
 
 
-# ======= 瀑布流|搜索|播放页|短视频|贴片 广告 ======= #
+# ======= 瀑布流|搜索|播放页|短视频|贴片 广告 视频PiP|后台播放 ======= #
 ^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next|player|search|reel\/reel_watch_sequence|guide|account\/get_setting) url script-response-body https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/youtube.js
 
 
