--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -35,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023\.01\.28/v2\.0\/247 url reject
+^https?:\/\/2023.01.28\/v2.0.247 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
