--- a/AdBlock/Amap.conf
+++ b/AdBlock/Amap.conf
@@ -6,11 +6,11 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-12
+// @UpdateTime        2023-01-29
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载高德地图，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.16
+// @Version           V1.0.17
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf
 // ==/UserScript==
 
@@ -22,11 +22,13 @@ hostname=*.amap.com
 ;host, amdc.m.taobao.com, reject
 
 
+# > 高德地图_路线规划下方广告@ddgksf2013
+^https?:\/\/.*\.amap\.com\/ws\/faas\/amap-navigation\/card-service-route-plan\? url reject-dict
 # > 高德地图_首页右中广告@ddgksf2013
 ^https?:\/\/.*\.amap\.com\/ws\/shield\/frogserver\/aocs\/updatable url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amap.js
 # > 高德地图_附近页面@ddgksf2013
 ^https?:\/\/.*\.amap\.com\/ws\/shield\/search\/nearbyrec_smart url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amap.js
-# > 高德地图_打车页面@ddgksf2013
+# > 高德地图_打车页面处理@ddgksf2013
 ^https?:\/\/.*\.amap\.com\/ws\/promotion-web\/resource url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amap.js
 # > 高德地图_Tip请求@ddgksf2013
 ^https?:\/\/.*\.amap\.com\/ws\/boss\/order_web\/\w{8}_information url reject-200
@@ -46,7 +48,7 @@ hostname=*.amap.com
 ^https?:\/\/.*\.amap\.com\/ws\/shield\/scene\/recommend url reject-dict
 # > 高德地图_首页左上角gif@ddgksf2013
 ^https?:\/\/.*\.amap\.com\/uploadimg\/\w+\.gif url reject-img
-# > 高德地图_首页右中'2022出行报告'[已解决]@ddgksf2013
+# > 高德地图_首页右中'2022出行报告'[已从根本上解决]@ddgksf2013
 ;^https?:\/\/img\.alicdn\.com\/imgextra\/i1\/O1CN01z5u64r1EdKvtRa19q_!!6000000000374-2-tps-120-120\.png
 # > 高德地图_左下天气@ddgksf2013
 ^https?:\/\/.*\.amap\.com\/ws\/valueadded\/weather url reject-dict
