--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -34,7 +34,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.01.31\/v2.0.249 url reject
+^https?:\/\/2023.01.31\/v2.0.250 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
@@ -340,7 +340,7 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 ^https?:\/\/creditcardapp\.bankcomm\.cn\/mappweb_interface\/common\/(qryPopAds|qryLaunchAds)\.do url reject
 # > mixuebingcheng
 ^https:\/\/mxsa\.mxbc\.net\/api\/v1\/adinfo\/limitedAds$ url reject
-# > maoyan
+# > maoyan*
 ^https?:\/\/p0\.pipi\.cn\/adAdmin\/\w+.jpg\? url reject-img
 
 
