--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        微博&微博国际版净化
+// @ScriptName        微博&微博国际版净化[墨鱼版]
 // @Author            @ddgksf2013,@zmqcherish,@shiro
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
