--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -13,4 +13,11 @@
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
+hostname = interface*.music.163.com 
 
+# > 网易云_通用广告请求
+api\/ad\/ url reject-dict
+# > 网易云_不知道是个啥
+api\/sp\/flow url reject-dict
+# > 网易云_屏蔽更新
+api/ios/upgrade url reject-dict
