--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -20,4 +20,4 @@ api\/ad\/ url reject-dict
 # > 网易云_不知道是个啥
 api\/sp\/flow url reject-dict
 # > 网易云_屏蔽更新
-api/ios/upgrade url reject-dict
+api\/ios\/upgrade url reject-dict
