--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -9,9 +9,13 @@
 // @UpdateTime        2023-01-31
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.1
+// @Version           V1.0.4
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
+
+
+// 进入【设置】，然后点击【底部导航自定义】里可移除网易云APP下方的【博客】与【社区】tab
+// 首页滑到最底部，点击【自定义排序】，可移除【顶部横幅】card，里面包含广告，作用也不大
 
 hostname = interface*.music.163.com 
 
