--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -6,16 +6,16 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-31
+// @UpdateTime        2023-02-01
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.4
+// @Version           V1.0.5
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
 
-// 进入【设置】，然后点击【底部导航自定义】里可移除网易云APP下方的【博客】与【社区】tab
-// 首页滑到最底部，点击【自定义排序】，可移除【顶部横幅】card，里面包含广告，作用也不大
+// 进入【设置】，然后点击【底部导航自定义】，进入后可移除网易云APP下方的【博客】与【社区】tab
+// 首页滑到最底部，点击【自定义排序】，可移除【顶部横幅】card，顶部横幅里包含广告，作用也不大，建议移除
 
 hostname = interface*.music.163.com 
 
