--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -9,13 +9,13 @@
 // @UpdateTime        2023-02-01
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.5
+// @Version           V1.0.6
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
-
-// 进入【设置】，然后点击【底部导航自定义】，进入后可移除网易云APP下方的【博客】与【社区】tab
-// 首页滑到最底部，点击【自定义排序】，可移除【顶部横幅】card，顶部横幅里包含广告，作用也不大，建议移除
+// 墨鱼建议：
+// 1、进入【设置】，然后点击【底部导航自定义】，进入后可移除网易云APP下方的【博客】与【社区】tab
+// 2、首页滑到最底部，点击【自定义排序】，可移除【顶部横幅】card，顶部横幅里包含广告，作用也不大
 
 hostname = interface*.music.163.com 
 
