--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -9,7 +9,7 @@
 // @UpdateTime        2023-02-01
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.7
+// @Version           V1.0.8
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
@@ -26,3 +26,5 @@ api\/ad\/ url reject-dict
 api\/sp\/flow url reject-dict
 # > 网易云_屏蔽更新
 api\/ios\/upgrade url reject-dict
+# > 网易云_LIKE音乐上方推广
+api/link/position/show/resource url reject-dict
