--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -9,7 +9,7 @@
 // @UpdateTime        2023-02-01
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.10
+// @Version           V1.0.11
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
@@ -32,3 +32,5 @@ api/link/position/show/resource url reject-dict
 eapi/resource-exposure/config url reject-dict
 # > 网易云_搜索框专词
 api\/search\/specialkeyword url reject-dict
+# > 网易云_首页右上角激励图标
+api\/link\/scene\/show\/resource url reject-dict
