--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -9,7 +9,7 @@
 // @UpdateTime        2023-02-01
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.11
+// @Version           V1.0.12
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
@@ -34,3 +34,15 @@ eapi/resource-exposure/config url reject-dict
 api\/search\/specialkeyword url reject-dict
 # > 网易云_首页右上角激励图标
 api\/link\/scene\/show\/resource url reject-dict
+# > 网易云_搜索框推荐
+api\/search\/default url reject-dict
+# > 网易云_评论区下方广告
+api\/comment\/feed\/inserted url reject-dict
+# > 网易云_评论回复区广告
+api\/v\d\/content\/exposure\/comment url reject-dict
+# > 网易云_搜索页猜你喜欢[卸载重装]
+api\/search\/rcmd\/keyword url reject-dict
+# > 网易云_搜索框填词
+api\/search\/default\/keyword url reject-dict
+# > 网易云_评论区右上角
+api\/comment\/hotcomment\/collect url reject-dict
