--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -9,7 +9,7 @@
 // @UpdateTime        2023-02-01
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.12
+// @Version           V1.0.13
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
@@ -46,3 +46,9 @@ api\/search\/rcmd\/keyword url reject-dict
 api\/search\/default\/keyword url reject-dict
 # > 网易云_评论区右上角
 api\/comment\/hotcomment\/collect url reject-dict
+# > 网易云_活动推广1
+api/middle/clientcfg/config url reject-dict
+# > 网易云_活动推广2
+api/resource-exposure/activity/config url reject-dict
+# > 网易云_VIP歌曲提醒框
+api/vipcenter/tspopup/get url reject-dict
