--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -9,7 +9,7 @@
 // @UpdateTime        2023-02-01
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.13
+// @Version           V1.0.14
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
@@ -52,3 +52,5 @@ api/middle/clientcfg/config url reject-dict
 api/resource-exposure/activity/config url reject-dict
 # > 网易云_VIP歌曲提醒框
 api/vipcenter/tspopup/get url reject-dict
+# > 网易云_搜索页下方热搜CARD
+; api\/search\/chart url reject-dict
