--- a/AdBlock/Zhihu.conf
+++ b/AdBlock/Zhihu.conf
@@ -9,6 +9,47 @@
 // @UpdateTime        2023-01-29
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.1
+// @Version           V1.0.2
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Zhihu.conf
 // ==/UserScript==
+
+
+hostname = www.zhihu.com,api.zhihu.com,zhuanlan.zhihu.com,appcloud2.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226
+
+
+# > 知乎助手_开屏广告
+commercial_api.*launch_v2 url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhihu_json.js
+# > 知乎助手_猜你想搜
+search\/recommend_query url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhihu_json.js
+# > 知乎助手_首页想法
+search\/tabs url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhihu_json.js
+# > 知乎助手_预设词
+search/preset_words url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhihu_json.js
+# > 知乎助手_会员页面会员购
+bazaar/vip_tab/tabs url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhihu_json.js
+# > 知乎助手_应用启动引导
+me/guides url reject-dict
+# > 知乎助手_去除文章下的广告
+api/v4/articles/\d+/recommendation url reject-dict
+# > 知乎助手_去除回答下的广告
+api/v4/answers/\d+/recommendation url reject-dict
+# > 知乎助手_我的页面开通会员CARD
+unlimited/go/my_card url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhihu_json.js
+# > 知乎助手_我的页面下方内容
+api/v4/profile/cards url reject-dict
+# > 知乎助手_我的页面 
+people/self$ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhihu_json.js
+# > 知乎助手_关注页最常访问
+moments\/recent url reject-dict
+# > 知乎助手_品牌提问广告
+brand\/question\/\d+/card\? url reject-dict
+# > 知乎助手_搜索框左侧推广
+feed\/render\/revisit\/current_reading url reject-dict
+# > 知乎助手_Tab页关注ICON
+moments\/tab_v2 url reject-dict
+# > 知乎助手_拦截部分预加载
+appview\/(p|v2\/answer|zvideo)\/.*entry=(preload-topstory|preload-search|preload-subscription) url reject-dict
+# > 知乎助手_屏蔽远程配置
+ab\/api\/v1\/products\/zhihu\/platforms\/ios\/config url reject-dict
+# > 知乎助手_推荐信息流去广告
+topstory/recommend url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/zhihu_json.js
