--- a/AdBlock/Zhihu.conf
+++ b/AdBlock/Zhihu.conf
@@ -9,12 +9,12 @@
 // @UpdateTime        2023-01-29
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.2
+// @Version           V1.0.3
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Zhihu.conf
 // ==/UserScript==
 
 
-hostname = www.zhihu.com,api.zhihu.com,zhuanlan.zhihu.com,appcloud2.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226
+hostname = *.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226
 
 
 # > 知乎助手_开屏广告
