--- a/AdBlock/Zhihu.conf
+++ b/AdBlock/Zhihu.conf
@@ -14,7 +14,7 @@
 // ==/UserScript==
 
 
-hostname = *.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226
+hostname = *.zhihu.com,103.41.167.*
 
 
 # > 知乎助手_开屏广告
