--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -9,7 +9,7 @@
 // @UpdateTime        2023-02-01
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.16
+// @Version           V1.0.17
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
@@ -21,36 +21,36 @@
 hostname = interface*.music.163.com 
 
 # > 网易云_通用广告请求
-api\/ad\/ url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/ad\/ url reject-dict
 # > 网易云_不知道是个啥
-api\/sp\/flow url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/sp\/flow url reject-dict
 # > 网易云_屏蔽更新
-api\/ios\/upgrade url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/ios\/upgrade url reject-dict
 # > 网易云_LIKE音乐上方推广
-api\/link\/position\/show\/resource url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/link\/position\/show\/resource url reject-dict
 # > 网易云_歌单上方推广
-eapi\/resource-exposure\/config url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?eapi\/resource-exposure\/config url reject-dict
 # > 网易云_搜索框专词
-api\/search\/specialkeyword url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/search\/specialkeyword url reject-dict
 # > 网易云_首页右上角激励图标
-api\/link\/scene\/show\/resource url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/link\/scene\/show\/resource url reject-dict
 # > 网易云_搜索框推荐
-api\/search\/default url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/search\/default url reject-dict
 # > 网易云_评论区下方广告
-api\/comment\/feed\/inserted url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/comment\/feed\/inserted url reject-dict
 # > 网易云_评论回复区广告
-api\/v1\/content\/exposure\/comment url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/v1\/content\/exposure\/comment url reject-dict
 # > 网易云_搜索页猜你喜欢[卸载重装]
-api\/search\/rcmd\/keyword url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/search\/rcmd\/keyword url reject-dict
 # > 网易云_搜索框填词
-api\/search\/default\/keyword url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/search\/default\/keyword url reject-dict
 # > 网易云_评论区右上角
-api\/comment\/hotcomment\/collect url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/comment\/hotcomment\/collect url reject-dict
 # > 网易云_活动推广1
-api\/middle\/clientcfg\/config url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/middle\/clientcfg\/config url reject-dict
 # > 网易云_活动推广2
-api\/resource-exposure\/activity\/config url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/resource-exposure\/activity\/config url reject-dict
 # > 网易云_VIP歌曲提醒框
-api\/vipcenter/tspopup\/get url reject-dict
+^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/vipcenter/tspopup\/get url reject-dict
 # > 网易云_搜索页下方热搜CARD
-; api\/search\/chart url reject-dict
+; ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/search\/chart url reject-dict
