--- a/AdBlock/Zhihu.conf
+++ b/AdBlock/Zhihu.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        知乎增强助手[墨鱼版]
+// @ScriptName        知乎增强助手[暂搁置，bm7新版已解决文章及回答页面下方AD]
 // @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
