--- a/AdBlock/Amap.conf
+++ b/AdBlock/Amap.conf
@@ -6,11 +6,11 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-29
+// @UpdateTime        2023-02-02
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载高德地图，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.17
+// @Version           V1.0.18
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf
 // ==/UserScript==
 
@@ -22,6 +22,8 @@ hostname=*.amap.com
 ;host, amdc.m.taobao.com, reject
 
 
+# > 高德地图_底部tab栏角标@ddgksf2013
+^https?:\/\/.*\.amap\.com\/ws\/message\/notice\/list url reject-dict
 # > 高德地图_路线规划下方广告@ddgksf2013
 ^https?:\/\/.*\.amap\.com\/ws\/faas\/amap-navigation\/card-service-route-plan\? url reject-dict
 # > 高德地图_首页右中广告@ddgksf2013
