--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -10,7 +10,7 @@
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @UpdateTime        2023-02-02
-// @ConfigVersion     V2.0.104
+// @ConfigVersion     V2.0.105
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
@@ -70,7 +70,7 @@
 //2023-01-17 47、proto动态去广告正则匹配添加grpc.biliapi.net(方便surge用户)，兴许后面QX也会跟进MITM h2
 //2023-01-18 48、屏蔽B站直播页顶部轮播图，本来想把白B直播顶部的大ICON移植到粉B，但粉B不识别V1
 //2023-01-22 49、处理B站直播间右下角商品推广
-//2023-02-02 50、特别说明：由于粉B与白B首页顶部都统一了样式，在代理情况下，港澳台的[动画]页面不会出现，建议关闭重写，使用白B，代理进入即可看到[动画]tab
+//2023-02-02 50、特别说明：由于粉B与白B首页顶部都统一了样式，在代理情况下，港澳台的[动画]页面不会出现，建议关闭重写，代理进入即可看到[动画]tab
 
 
 
