--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-01-24
+// @UpdateTime        2023-02-03
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.56
+// @Version           V2.0.57
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -66,7 +66,7 @@
 # [+]2023-01-18  47、屏蔽微博客户端首页左上角每日的弹窗tips
 # [+]2023-01-22  48、去除微博热搜对应某关键词下信息流中的遗留广告
 # [+]2023-01-24  49、去除微博底部超话栏表层浮icon及tips
-
+# [+]2023-02-03  50、解决微博用户置顶博文消失的bug，同时新增去除搜索框下方的猜你想搜条目
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 
