--- a/AdBlock/Cainiao.conf
+++ b/AdBlock/Cainiao.conf
@@ -10,12 +10,12 @@
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载菜鸟APP，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.3
+// @Version           V1.0.4
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Cainiao.conf
 // ==/UserScript==
 
 
-hostname=*.amap.com
+hostname=cn-acs.m.cainiao.com
 
 
 # > 菜鸟裹裹_请自行添加本地分流@ddgksf2013
