--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -18,18 +18,19 @@
 
 # ======= ~ ====== #
 
-#以下重写请自行添加，本重写引用不含【喜马拉雅、哔哩哔哩、微博、Youtube、Keep、百度贴吧、知乎、什么值得买、高德地图、小红书】去广告
+#以下重写请自行添加，本重写引用不含【喜马拉雅、哔哩哔哩、微博、Youtube、Keep、百度贴吧、知乎、什么值得买、高德地图、小红书、网易云、京东】去广告
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/KeepStyle.conf
 ;https://github.com/app2smile/rules/raw/master/module/tieba-qx.conf
-;https://github.com/blackmatrix7/ios_rule_script/raw/master/script/zhihu/zhihu_plus.qxrewrite
+;https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.snippet
 ;https://github.com/blackmatrix7/ios_rule_script/raw/master/script/smzdm/smzdm_remove_ads.qxrewrite
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/XiaoHongShu.conf
-
+;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
+;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/JingDong.conf
 
 # ======= 0~9 ======= #
 
