--- a/AdBlock/Amap.conf
+++ b/AdBlock/Amap.conf
@@ -6,11 +6,11 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-02
+// @UpdateTime        2023-02-08
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         使用前请卸载高德地图，挂载脚本然后使用
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.18
+// @Version           V1.0.19
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf
 // ==/UserScript==
 
@@ -23,7 +23,7 @@ hostname=*.amap.com
 
 
 # > 高德地图_底部tab栏角标@ddgksf2013
-^https?:\/\/.*\.amap\.com\/ws\/message\/notice\/list url reject-dict
+^https?:\/\/.*\.amap\.com\/ws\/message\/notice\/list url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/amap.js
 # > 高德地图_路线规划下方广告@ddgksf2013
 ^https?:\/\/.*\.amap\.com\/ws\/faas\/amap-navigation\/card-service-route-plan\? url reject-dict
 # > 高德地图_首页右中广告@ddgksf2013
