--- a/AdBlock/Cainiao.conf
+++ b/AdBlock/Cainiao.conf
@@ -27,5 +27,5 @@ hostname=cn-acs.m.cainiao.com
 ^https?:\/\/cn-acs\.m\.cainiao\.com\/gw\/mtop\.cainiao\.adkeyword url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/master/cainiao_json.js
 # > 菜鸟裹裹_首页底部商品推广@ddgksf2013
 ^https?:\/\/cn-acs\.m\.cainiao\.com\/gw\/mtop\.cainiao\.guoguo\.nbnetflow\.ads\.index\.cn url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/master/cainiao_json.js
-# > 菜鸟裹裹_通用广告请求[包含开屏广告]@ddgksf2013
+# > 菜鸟裹裹_通用广告请求@ddgksf2013
 ^https?:\/\/cn-acs\.m\.cainiao\.com\/gw\/mtop\.cainiao\.guoguo\.nbnetflow\.ads\.(show|mshow)\.cn url reject-200
