--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @ScriptName        BiliBili_AdBlock_DIY
-// @Author            @ddgksf2013, @blackmatrix7, @app2smile, @yjqiang
+// @Author            @ddgksf2013, @blackmatrix7, @app2smile, @yjqiang, @kokoryh
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @TaiWanBilibili    https://apps.apple.com/tw/app/id1517062289
 // @HKBilibili        https://apps.apple.com/hk/app/id1517062289
@@ -9,8 +9,8 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-08
-// @ConfigVersion     V2.0.107
+// @UpdateTime        2023-02-09
+// @ConfigVersion     V2.0.108
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
@@ -72,7 +72,7 @@
 //2023-01-22 49、处理B站直播间右下角商品推广
 //2023-02-02 50、特别说明：由于粉B与白B首页顶部都统一了样式，在代理情况下，港澳台的[动画]页面不会出现，建议关闭重写，代理进入即可看到[动画]tab
 //2023-02-07 51、由于proto数据源未更新，致使新版粉B的动态页面，图文混合推送中文字不显示，如果介意此bug，可使用解析器排除该重写#out=DynAll
-
+//2023-02-09 52、更新biliJson数据源@kokoryh，解决粉色B站动态页面图文混合推送中文字不显示的bug
 
 
 hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.net, app.bilibili.com, api.live.bilibili.com, *.bilibili.com, *.bilibili.*, grpc.biliapi.net,*biliapi.net
@@ -119,7 +119,7 @@ hostname = -broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*tracker*.biliapi.
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_json.js
 # ～ BiliBili_哔哩哔哩_UP主推荐广告[适配ipad端]@app2smile@ddgksf2013
 ^https?:\/\/(app\.bilibili\.com|grpc\.biliapi\.net)\/bilibili\.app\.view\.v1\.View\/View$ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_proto.js
-# ～ BiliBili_哔哩哔哩_动态页面去广告[#out=DynAll]@app2smile@ddgksf2013
+# ～ BiliBili_哔哩哔哩_动态页面去广告[#out=DynAll]@app2smile@kokoryh@ddgksf2013
 ^https?:\/\/(app\.bilibili\.com|grpc\.biliapi\.net)\/bilibili\.app\.dynamic\.v2\.Dynamic\/DynAll$ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_proto.js
 # ～ BiliBili_哔哩哔哩_启动时开启直连模式[自行启用]@ddgksf2013
 ;^https?:\/\/app\.bilibili\.com\/x\/resource\/domain url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/bilibili_startup_direct.js
