--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -11,7 +11,7 @@
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.59
+// @Version           V2.0.60
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -69,6 +69,7 @@
 # [+]2023-02-03  50、解决微博用户置顶博文消失的bug，同时新增去除搜索框下方的猜你想搜条目
 # [+]2023-02-08  51、修复首页‘可能感兴趣的人’card失效bug，同时去除搜索页面中部比较窄的‘热门微博’字样的CARD，使信息流保持一致
 # [+]2023-02-09  52、自动删除我的页面除[超话社区]CARD以外的所有推广内容（再也不用手动移除），另外[超话社区]依然支持自主移除或添加到我的页面内
+# [+]2023-02-09  53、我的页面Card白名单新增[我的最近访问]，以方便群友，依然支持自主移除或添加
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 
