--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @ScriptName        微博&微博国际版净化[墨鱼版]
-// @Author            @ddgksf2013,@zmqcherish,@shiro
+// @Author            @ddgksf2013,@zmqcherish
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
 // @TgChannel         https://t.me/ddgksf2021
@@ -106,9 +106,9 @@ hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php\?a=hot_search_users url reject-dict
 # > 微博国际版_屏蔽热推荐@ddgksf2013
 ^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/ad\/weibointl\? url reject-dict
-# > 微博国际版_屏蔽searching_info@ddgksf2013
+# > 微博国际版_屏蔽searching_info@shiro
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*user&a=get_searching_info url echo-response text/html echo-response https://github.com/ddgksf2013/Scripts/raw/master/weibo_search_info.json
-# > 微博国际版_屏蔽search_topic@ddgksf2013 
+# > 微博国际版_屏蔽search_topic@shiro
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*feed&a=search_topic url echo-response text/html echo-response https://github.com/ddgksf2013/Scripts/raw/master/weibo_search_topic.json
 # > 微博国际版_屏蔽开屏广告@ddgksf2013 
 ^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*get_coopen_ads url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
