--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -1,6 +1,6 @@
 // ==UserScript==
 // @ScriptName        QX去开屏广告计划 V2.0
-// @Author            @ddgksf2013, @blackmatrix7, @app2smile, @DivineEngine, @kyle, @Nick-workflow, @kkpp, @ZhangJun
+// @Author            @ddgksf2013, @blackmatrix7, @app2smile, @DivineEngine, @kyle, @Nick-workflow, @kkpp
 // @TgChannel         https://t.me/ddgksf2021
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
