--- a/AdBlock/Netease.conf
+++ b/AdBlock/Netease.conf
@@ -6,10 +6,10 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-07
+// @UpdateTime        2023-02-10
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.18
+// @Version           V1.0.19
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
 // ==/UserScript==
 
@@ -47,7 +47,7 @@ hostname = interface*.music.163.com
 # > 网易云_评论区右上角
 ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/comment\/hotcomment\/collect url reject-dict
 # > 网易云_活动推广1
-^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/middle\/clientcfg\/config url reject-dict
+; ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/middle\/clientcfg\/config url reject-dict
 # > 网易云_活动推广2
 ^https?:\/\/interface(\d)?\.music\.163\.com\/w?e?api\/resource-exposure\/activity\/config url reject-dict
 # > 网易云_VIP歌曲提醒框
