--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -1,16 +1,17 @@
 // ==UserScript==
-// @ScriptName        QX去开屏广告计划 V2.0
+// @ScriptName        墨鱼去开屏V2.0
 // @Author            @ddgksf2013, @blackmatrix7, @app2smile, @DivineEngine, @kyle, @Nick-workflow, @kkpp
-// @TgChannel         https://t.me/ddgksf2021
+// @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @TgBot             https://t.me/ddgksf2013_bot
 // @WechatID          公众号墨鱼手记
+// @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
 // @UpdateTime        2023-02-10
 // @Please            如需引用请注明出处，谢谢合作！
 // @Function          去除APP首页启动广告和部分应用内广告，如果有需要的去除广告的APP，可以公众号后台直接回复
 // @ExtraTxt          Only provide the removal of open-screen advertisements for personally used apps
 // @Attention         QuantumultX能去广告，不代表能去所有广告！（应用个数：201）
 // @Mark              名字后面的*代表该应用启动倒计时仍然存在
-// @Attention         如果广告仍然存在，请卸载应用重新安装，还是不行则表示规则里没有或已失效
+// @Attention         如果广告仍然存在，请『卸载应用』重新安装，还是不行则表示规则里没有或已失效
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/StartUp.conf
 // ==/UserScript==
 
@@ -34,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.02.10\/v2.0.255 url reject
+^https?:\/\/2023.02.10\/v2.0.256 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
