--- a/AdBlock/Zhihu.conf
+++ b/AdBlock/Zhihu.conf
@@ -15,3 +15,5 @@
 
 
 //已完成，纯净化，无增强，暂自用
+//建议使用blackmatrix7的知乎净化
+//https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.snippet
