--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-09
+// @UpdateTime        2023-02-13
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.60
+// @Version           V2.0.61
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -70,12 +70,16 @@
 # [+]2023-02-08  51、修复首页‘可能感兴趣的人’card失效bug，同时去除搜索页面中部比较窄的‘热门微博’字样的CARD，使信息流保持一致
 # [+]2023-02-09  52、自动删除我的页面除[超话社区]CARD以外的所有推广内容（再也不用手动移除），另外[超话社区]依然支持自主移除或添加到我的页面内
 # [+]2023-02-09  53、我的页面Card白名单新增[我的最近访问]，以方便群友，依然支持自主移除或添加
+# [+]2023-02-13  54、修复某些用户微博页面最近动态不显示的bug，增加微博视频detail处理
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
 
 # > 微博_请手动添加以下分流至本地@ddgksf2013
 ; host, sdkapp.uve.weibo.com, direct
 
+
+# > 微博_视频信息处理@ddgksf2013
+^https?:\/\/api\.weibo\.cn\/\d\/video\/tiny_stream_mid_detail url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_去除底部超话栏表层浮icon及tips@ddgksf2013
 ^https?:\/\/api\.weibo\.cn\/\d\/!\/huati\/discovery_home_bottom_getdotinfo url reject-dict
 # > 微博_屏蔽首页左上角每日的弹窗tips@ddgksf2013
