--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-13
+// @UpdateTime        2023-02-15
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.61
+// @Version           V2.0.62
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -71,8 +71,10 @@
 # [+]2023-02-09  52、自动删除我的页面除[超话社区]CARD以外的所有推广内容（再也不用手动移除），另外[超话社区]依然支持自主移除或添加到我的页面内
 # [+]2023-02-09  53、我的页面Card白名单新增[我的最近访问]，以方便群友，依然支持自主移除或添加
 # [+]2023-02-13  54、修复某些用户微博页面最近动态不显示的bug，增加微博视频detail处理
+# [+]2023-02-15  55、在有缓存的情况下，移除微博搜索框下的‘猜你想搜’栏目以及‘猜你想搜偏好设置’栏目
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
+
 
 # > 微博_请手动添加以下分流至本地@ddgksf2013
 ; host, sdkapp.uve.weibo.com, direct
