--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-15
+// @UpdateTime        2023-02-17
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.62
+// @Version           V2.0.63
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -72,14 +72,18 @@
 # [+]2023-02-09  53、我的页面Card白名单新增[我的最近访问]，以方便群友，依然支持自主移除或添加
 # [+]2023-02-13  54、修复某些用户微博页面最近动态不显示的bug，增加微博视频detail处理
 # [+]2023-02-15  55、在有缓存的情况下，移除微博搜索框下的‘猜你想搜’栏目以及‘猜你想搜偏好设置’栏目
+# [+]2023-02-16  56、处理部分用户每日首次打开微博的开屏广告请求[部分用户是指未将boot.biz.weibo.com域名添加黑名单]
 
-hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn
+
+hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
 
 
 # > 微博_请手动添加以下分流至本地@ddgksf2013
 ; host, sdkapp.uve.weibo.com, direct
 
 
+# > 微博_每日一次的开屏广告请求@ddgksf2013
+^https?:\/\/boot\.biz\.weibo\.com\/v1\/ad\/realtime url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_视频信息处理@ddgksf2013
 ^https?:\/\/api\.weibo\.cn\/\d\/video\/tiny_stream_mid_detail url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/weibo_json.js
 # > 微博_去除底部超话栏表层浮icon及tips@ddgksf2013
