--- a/AdBlock/Cainiao.conf
+++ b/AdBlock/Cainiao.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        菜鸟[菜鸟裹裹]☆净化
+// @ScriptName        菜鸟[菜鸟裹裹](支付宝小程序)☆净化
 // @Author            @ddgksf2013
 // @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
 // @WechatID          公众号墨鱼手记
@@ -15,11 +15,12 @@
 // ==/UserScript==
 
 
-hostname=cn-acs.m.cainiao.com
+hostname=cn-acs.m.cainiao.com, guide-acs.m.taobao.com
 
 
 # > 菜鸟裹裹_请自行添加本地分流@ddgksf2013
 ;host, amdc.m.taobao.com, reject
+
 
 # > 菜鸟裹裹_首页中部的惊喜福利推广@ddgksf2013
 ^https?:\/\/cn-acs\.m\.cainiao\.com\/gw\/mtop\.cainiao\.nbpresentation\.protocol\.homepage\.get\.cn url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/master/cainiao_json.js
@@ -28,4 +29,12 @@ hostname=cn-acs.m.cainiao.com
 # > 菜鸟裹裹_首页底部商品推广@ddgksf2013
 ^https?:\/\/cn-acs\.m\.cainiao\.com\/gw\/mtop\.cainiao\.guoguo\.nbnetflow\.ads\.index\.cn url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/master/cainiao_json.js
 # > 菜鸟裹裹_通用广告请求@ddgksf2013
-^https?:\/\/cn-acs\.m\.cainiao\.com\/gw\/mtop\.cainiao\.guoguo\.nbnetflow\.ads\.(show|mshow)\.cn url reject-200
+^https?:\/\/cn-acs\.m\.cainiao\.com\/gw\/mtop\.cainiao\.guoguo\.nbnetflow\.ads\.(show|mshow)\.cn\/ url reject-200
+# > 菜鸟裹裹_支付宝小程序_通用广告请求@ddgksf2013
+^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.cainiao\.guoguo\.nbnetflow\.ads\.show url reject-200
+# > 菜鸟裹裹_支付宝小程序_底部商品推广@ddgksf2013
+^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.cainiao\.adx\.flyad\.getad url reject-200
+# > 菜鸟裹裹_支付宝小程序_匿名选择@ddgksf2013
+^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.cainiao\.nbmensa\.research\.researchservice\.consultmerge url reject-200
+# > 菜鸟裹裹_支付宝小程序_中部的寄件推广@ddgksf2013
+^https?:\/\/guide-acs\.m\.taobao\.com\/gw\/mtop\.cainiao\.guoguo\.nbnetflow\.ads\.mshow url script-response-body https://raw.githubusercontent.com/ddgksf2013/Scripts/master/cainiao_json.js
