--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -6,12 +6,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-02-22
+// @UpdateTime        2023-02-25
 // @Attention         微博、微博国际版净化，现已二合一，使用中若有问题请发邮件！
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.65
+// @Version           V2.0.66
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -75,6 +75,7 @@
 # [+]2023-02-16  56、处理部分用户每日首次打开微博的开屏广告请求[部分用户是指未将boot.biz.weibo.com域名添加黑名单]
 # [+]2023-02-18  57、修复微博在繁体字下评论区屏蔽用户推荐失效的问题
 # [+]2023-02-22  58、处理信息流中视频左上角的"红包派送中"Tag[code not added]
+# [+]2023-02-25  59、处理用户反馈的微博国际版‘微博会员’推广CARD
 
 
 hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
