--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -19,7 +19,7 @@
 
 # ======= ~ ====== #
 
-#以下重写请自行添加，本重写引用不含【喜马拉雅、哔哩哔哩、微博、Youtube、Keep、百度贴吧、知乎、什么值得买、高德地图、小红书、网易云】去广告
+#以下重写请自行添加，本重写引用不含【喜马拉雅、哔哩哔哩、微博、Youtube、Keep、百度贴吧、知乎、高德地图、小红书、网易云】去广告
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
@@ -27,7 +27,6 @@
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/KeepStyle.conf
 ;https://github.com/app2smile/rules/raw/master/module/tieba-qx.conf
 ;https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.snippet
-;https://github.com/blackmatrix7/ios_rule_script/raw/master/script/smzdm/smzdm_remove_ads.qxrewrite
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/XiaoHongShu.conf
 ;https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Netease.conf
@@ -35,7 +34,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.02.25\/v2.0.269 url reject
+^https?:\/\/2023.02.25\/v2.0.270 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
