使mitm适用小火箭

--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -11,7 +11,7 @@
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.66
+// @Version           V2.0.67
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -76,9 +76,10 @@
 # [+]2023-02-18  57、修复微博在繁体字下评论区屏蔽用户推荐失效的问题
 # [+]2023-02-22  58、处理信息流中视频左上角的"红包派送中"Tag[code not added]
 # [+]2023-02-25  59、处理用户反馈的微博国际版‘微博会员’推广CARD
+# [+]2023-02-25  60、修改MITM写法，使域名适用小火箭的MITM
 
 
-hostname = *api.weibo*, *uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
+hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
 
 
 # > 微博_请手动添加以下分流至本地@ddgksf2013
