--- a/AdBlock/Weibo.conf
+++ b/AdBlock/Weibo.conf
@@ -11,7 +11,7 @@
 // @Function          让你更加愉悦的刷微博
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V2.0.70
+// @Version           V2.0.71
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf
 // ==/UserScript==
 
@@ -77,7 +77,7 @@
 # [+]2023-02-22  58、处理信息流中视频左上角的"红包派送中"Tag[code not added]
 # [+]2023-02-25  59、处理用户反馈的微博国际版‘微博会员’推广CARD
 # [+]2023-02-25  60、修改MITM写法，使小火箭工具能够MITM本重写的域名[后续新的重写配置也将注意此问题]
-# [+]2023-03-04  61、调整boot.biz.weibo.com屏蔽策略，缩短微博应用启动时间，提高用户使用体验[或在本地添加分流host,boot.biz.weibo.com,reject]
+# [+]2023-03-04  61、调整boot.biz.weibo.com屏蔽策略，缩短微博应用启动时间，提高用户使用体验[或在本地添加分流host,boot.biz.weibo.com,reject(Anti已包含)]
 
 hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, *.uve.weibo.com, new.vip.weibo.cn, boot.biz.weibo.com
 
