--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -35,7 +35,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2023.03.12\/v2.0.281 url reject
+^https?:\/\/2023.03.12\/v2.0.282 url reject
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject
 # > 555
@@ -329,7 +329,7 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 # > MeiTuanWaiMai
 ^https?:\/\/img\.meituan\.net\/(bizad|brandCpt)\/\w+\.(png|jpg) url reject
 ^https?:\/\/.*\.meituan\.com\/api\/v\d\/(openscreen\?ad|appstatus\?ad|loadInfo\?|startpicture) url reject
-^http:\/\/s3plus\.meituan\.net\/.*\/brandcpt-vedio\/.*\?time
+^http:\/\/s3plus\.meituan\.net\/.*\/brandcpt-vedio\/.*\?time url reject
 # > MeiWeiBuYongDeng
 ^https?:\/\/capi.mwee.cn\/app-api\/V12\/app\/getstartad url reject
 # > MaFengWo
