--- a/AdBlock/SuiShouJi.conf
+++ b/AdBlock/SuiShouJi.conf
@@ -14,7 +14,7 @@
 // ==/UserScript==
 
 
-hostname = *.feidee.*
+hostname = *.feidee.*, *.ssjlicai.*
 
 # > 随手记_开屏广告
 https://tg.feidee.com/online_ad/api/search.do url reject
