--- a/AdBlock/Bilibili.conf
+++ b/AdBlock/Bilibili.conf
@@ -10,7 +10,7 @@
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
 // @UpdateTime        2023-04-01
-// @ConfigVersion     V2.0.110
+// @ConfigVersion     V2.0.111
 // @Attention         如果广告仍然存在，请清除缓存或卸载应用重新安装
 // @Attention         如需引用请注明出处，谢谢合作！
 // @Function          去广告配置（自用，不定期更新）
@@ -19,7 +19,7 @@
 // ==/UserScript==
 
 
-//更新日志：Made by ddgksf2013
+# 𝐂𝐮𝐭𝐭𝐥𝐞𝐟𝐢𝐬𝐡 𝐒𝐞𝐥𝐟-𝐮𝐬𝐞 𝐑𝐞𝐰𝐫𝐢𝐭𝐞 𝐂𝐨𝐧𝐟𝐢𝐠𝐮𝐫𝐚𝐭𝐢𝐨𝐧 𝐂𝐡𝐚𝐧𝐠𝐞𝐥𝐨𝐠 𝐂𝐫𝐞𝐚𝐭𝐞𝐝 𝐛𝐲 𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑
 //2021-12-20 1、 移除首页右上角的玩游戏
 //2022-01-08 2、 首页顶部只保留直播|推荐|追番|影视
 //2022-02-10 3、 移除我的->推荐服务中的会员购
